| Bug #40205 | O_DIRECT incorrectly disabled for backup | ||
|---|---|---|---|
| Submitted: | 21 Oct 2008 14:02 | Modified: | 22 Oct 2008 16:19 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[21 Oct 2008 14:02]
Jonas Oreland
[21 Oct 2008 14:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/56675 2701 Jonas Oreland 2008-10-21 ndb - bug#40205 O_DIRECT disabled for backups
[21 Oct 2008 14:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/56679 2702 Jonas Oreland 2008-10-21 ndb - bug#40205 O_DIRECT disabled for backups
[21 Oct 2008 17:44]
Jonas Oreland
pushed into 6.2.17, 6.3.19 and 64
[22 Oct 2008 16:19]
Jon Stephens
Documented in the ndb-6.2.17 and ndb-6.3.18 changelogs as follows:
O_DIRECT was incorrectly disabled when making MySQL Cluster backups.
[24 Oct 2008 3:19]
Bugs System
Pushed into 5.1.28-ndb-6.2.17 (revid:jonas@mysql.com-20081021123313-rvhcg2nb9l0bzz57) (version source revid:jonas@mysql.com-20081021123313-rvhcg2nb9l0bzz57) (pib:5)
[24 Oct 2008 3:19]
Bugs System
Pushed into 5.1.28-ndb-6.3.19 (revid:jonas@mysql.com-20081021123313-rvhcg2nb9l0bzz57) (version source revid:jonas@mysql.com-20081021131310-ypz6rb6glgt74zeq) (pib:5)
[24 Oct 2008 3:19]
Bugs System
Pushed into 5.1.28-ndb-6.4.0 (revid:jonas@mysql.com-20081021123313-rvhcg2nb9l0bzz57) (version source revid:jonas@mysql.com-20081021132059-7qmkuuv9k5c313gp) (pib:5)
[13 Dec 2008 0:26]
Bugs System
Pushed into 6.0.9-alpha (revid:jonas@mysql.com-20081021123313-rvhcg2nb9l0bzz57) (version source revid:tomas.ulin@sun.com-20081209185954-9svcixh2p5hsfi6w) (pib:5)
